@@ -2,9 +2,10 @@
 2018-05-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* termio.c (cob_display): cater for HAVE_POPEN
-	* common.h, fileio.c, reportio.c [__ORANGEC__]: minor adjustments for
+	* common.h, fileio.c [__ORANGEC__]: minor adjustments for
 	  preprocessor defines
 	* common.c: added OrangeC version info
+	* reportio.c: removed unneeded header and defines
 
 2018-04-16  Luke Smith <cobcoder@users.sourceforge.net>
 
